<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Main Screen Strings -->
    <string name="app_name">SqueeChat</string>
    <string name="action_settings">Settings</string>
    <string name="str0">Soft</string>
    <string name="str1">Medium</string>
    <string name="str2">Hard</string>
    <string name="force">Force</string>
    <string name="blue">Bluetooth Connection</string>
    
    <!-- Bluetooth Button Strings -->
    <string name="scan">Press to Scan for Devices</string>
    <string name="scanning">Scanning for Devices</string>
    <string name="connecting">Device Found, Connecting</string>
    <string name="connectedd">Device Connected</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    
    <!-- Dialog  -->
    <string name="dialog">Device not connected</string>
    <string name="dialogtitle">Hold arm straight out from the body and place Squeechat Armband on side of arm away from the body. Adjust Squeechat Armband based on the following feedback:</string>
    <string name="dialogbut">Done</string>
    
    <!-- Bluetooth Strings -->
    <string name="no_data">No data</string>
    <string name="calibrate">Calibrate</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">Available BlueTooth Devices</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    

</resources>
