<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/TVdialogtitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5sp"
        android:paddingTop="14sp"
        android:paddingBottom="7sp"
        android:text="@string/dialogtitle"
        android:textSize="14sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/TVdialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7sp"
        android:paddingBottom="14sp"
        android:text="@string/dialog"
        android:layout_gravity="center_horizontal|center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="?android:attr/dividerHorizontal" />

    <Button
        android:id="@+id/Bdialog"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialogbut"
        android:textSize="14sp" />

</LinearLayout>
